# omero-import-pipeline

./: .gitignore  README.md  config.example.sh  pyproject.toml  run_omero_pipeline.sh  screen_mapping.json
docs/: failure_modes.md  workflow.md
src/omero_import_pipeline/: datatypes.py  generate_companion.py  generate_companion_batch.py  generate_ome_tiffs.py  generate_ome_tiffs_batch.py  generate_omero_imports.py  generator.py  grouping.py  io.py  metadata.py  normalization.py  templates.py
