[project]
name = "omero-import-pipeline"
version = "0.1.0"
description = "Minimal tooling and orchestration for OMERO import workflows"
requires-python = ">=3.10"
dependencies = [
  "numpy",
	"imagecodecs",
  "tifffile",
  "ome-types",
]

[project.scripts]
generate-ome-tiffs = "omero_import_pipeline.generate_ome_tiffs:main"
generate-ome-tiffs-batch = "omero_import_pipeline.generate_ome_tiffs_batch:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
